--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
 				  	</ul>
 			  	</div>
 			</section>
-
+<div class="video-background">
+  <video autoplay muted loop id="bg-video">
+    <source src="videos/bg 1.mp4" type="video/mp4">
+    <!-- Add additional source formats for better browser support if needed -->
+  </video>
+</div>
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
 					<div class="row">
