--- a/index.html
+++ b/index.html
@@ -707,8 +707,8 @@ I craft narratives for stage, talent, Q&A, and costume that reflect values, inte
 							<div class="blog-entry">
 								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Renovating National Gallery</a></h3>
+									<span><small>April 14, 2025</small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
+									<h3><a href="blog.html">Magazine cover</a></h3>
 								</div>
 							</div>
 						</div>
@@ -716,8 +716,8 @@ I craft narratives for stage, talent, Q&A, and costume that reflect values, inte
 							<div class="blog-entry">
 								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
+									<span><small>April 25, 2025 </small> | <small></small> | <small> <i class="icon-bubble3"></i> 4</small></span>
+									<h3><a href="blog.html">Mr.Uni</a></h3>
 								</div>
 							</div>
 						</div>
@@ -725,8 +725,8 @@ I craft narratives for stage, talent, Q&A, and costume that reflect values, inte
 							<div class="blog-entry">
 								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Make website from scratch</a></h3>
+									<span><small> </small> | <small> </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
+									<h3><a href="blog.html"></a></h3>
 								</div>
 							</div>
 						</div>
